--- a/spa/src/assets/styles/main.css
+++ b/spa/src/assets/styles/main.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700&display=swap&subset=latin-ext');
 
 html, body {
   font-family: 'Nunito', sans-serif;
 }
 
+.font-fira {
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
+}
 .container {
   max-width: 1080px;
   margin: 0 auto;
