--- a/spa/src/assets/styles/main.css
+++ b/spa/src/assets/styles/main.css
@@ -2,16 +2,19 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap&subset=latin-ext');
 
 html, body {
   font-family: 'Nunito', sans-serif;
 }
-
+.font-bebas {
+  font-family: 'Bebas Neue', sans-serif;
+}
 .font-fira {
   font-family: 'Fira Sans Extra Condensed', sans-serif;
 }
 .container {
-  max-width: 1080px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 #app {
