--- a/spa/src/assets/styles/main.css
+++ b/spa/src/assets/styles/main.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap&subset=latin-ext');
 
 html, body {
+  margin: 0;
+  padding: 0;
   font-family: 'Nunito', sans-serif;
 }
 .font-bebas {
